--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title class="title-text">Webstudio</title>
   </head>
   <body>
     <header class="header-container">
       <nav class="header-navigation">
-        <a href="./index.html" class="icon-logo_text">WebStudio</a>
+        <a href="./index.html" class="icon-logo_text"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
         <ul class="header-navigation_ul">
           <li class="header-navigation_li">
             <a href="" class="header-navigation_a">Studio</a>
@@ -42,7 +44,9 @@
     <main class="main-container">
       <section class="content-section">
         <h1 class="cover-section_h1">Effective Solutions for Your Business</h1>
-        <button class="cover-section_button" type="button">Order Service</button>
+        <button class="cover-section_button" type="button">
+          Order Service
+        </button>
       </section>
       <section class="content-section">
         <h2 class="hidden-reader_h1">Reader h2 text</h2>
@@ -155,8 +159,8 @@
     <footer class="footer-container">
       <a href="./index.html" class="icon-logo_text">WebStudio</a>
       <p class="footer-content_text">
-        Increase the flow of customers and sales for your business with
-        digital marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
