--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="./css/styles-reset.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title class="title-text">Webstudio</title>
   </head>
   <body>
@@ -17,7 +19,7 @@
             <a href="" class="header-navigation_a">Studio</a>
           </li>
           <li class="header-navigation_li">
-            <a href="" class="header-navigation_a">Portfolio</a>
+            <a href="./portfolio.html" class="header-navigation_a">Portfolio</a>
           </li>
           <li class="header-navigation_li">
             <a href="" class="header-navigation_a">Contacts</a>
@@ -42,14 +44,14 @@
       </address>
     </header>
     <main class="main-container">
-      <section class="content-section">
+      <section class="content-section start-section">
         <h1 class="cover-section_h1">Effective Solutions for Your Business</h1>
         <button class="cover-section_button" type="button">
           Order Service
         </button>
       </section>
-      <section class="content-section">
-        <h2 class="hidden-reader_h1">Reader h2 text</h2>
+      <section class="content-section feature-section">
+        <h2 class="visually-hidden">Features</h2>
         <ul class="content-text-container">
           <li class="content-text_block">
             <h3 class="content-text_h3">Strategy</h3>
@@ -81,7 +83,7 @@
           </li>
         </ul>
       </section>
-      <section class="content-section">
+      <section class="content-section doing-section">
         <h2 class="content-photo_h2">What are we doing</h2>
         <ul class="content-photos">
           <li class="content-photo_li">
@@ -110,7 +112,7 @@
           </li>
         </ul>
       </section>
-      <section class="content-section">
+      <section class="content-section team-section">
         <h2 class="content-team_h2">Our Team</h2>
         <ul class="content-team-container">
           <li class="team-persone_card">
@@ -157,7 +159,8 @@
       </section>
     </main>
     <footer class="footer-container">
-      <a href="./index.html" class="icon-logo_text">WebStudio</a>
+      <a href="./index.html" class="icon-logo_text"
+      ><span class="logo-accent">Web</span>Studio</a>
       <p class="footer-content_text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
