--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="./css/styles-reset.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title class="title-text">Portfolio</title>
   </head>
   <body>
@@ -44,89 +46,91 @@
     <main class="contant-container">
       <ul class="filter-buttons">
         <li class="button-wrapper">
-          <input type="button" value="" class="filter-button" />
+          <input type="button" value="all" class="filter-button" />
         </li>
         <li class="button-wrapper">
-          <input type="button" value="" class="filter-button" />
+          <input type="button" value="web site" class="filter-button" />
         </li>
         <li class="button-wrapper">
-          <input type="button" value="" class="filter-button" />
+          <input type="button" value="app" class="filter-button" />
         </li>
         <li class="button-wrapper">
-          <input type="button" value="" class="filter-button" />
+          <input type="button" value="design" class="filter-button" />
         </li>
         <li class="button-wrapper">
-          <input type="button" value="" class="filter-button" />
+          <input type="button" value="marketing" class="filter-button" />
         </li>
       </ul>
       <ul class="cart-list">
         <li class="cart-element">
-          <img src="" alt="" class="cart-image:s" />
+          <img src="./images/portfolio/img-8.jpg" alt="" class="cart-image" />
           <div class="cart-text_container">
-            <p class="cart-title"></p>
-            <p class="cart-description"></p>
+            <p class="cart-title">Banking App Interface Concept</p>
+            <p class="cart-description">App</p>
           </div>
         </li>
         <li class="cart-element">
-          <img src="" alt="" class="cart-image:s" />
+          <img src="./images/portfolio/img-7.jpg" alt="" class="cart-image" />
           <div class="cart-text_container">
-            <p class="cart-title"></p>
-            <p class="cart-description"></p>
+            <p class="cart-title">Cashless Payment</p>
+            <p class="cart-description">Marketing</p>
           </div>
         </li>
         <li class="cart-element">
-          <img src="" alt="" class="cart-image:s" />
+          <img src="./images/portfolio/img-6.jpg" alt="" class="cart-image" />
           <div class="cart-text_container">
-            <p class="cart-title"></p>
-            <p class="cart-description"></p>
+            <p class="cart-title">Meditation App</p>
+            <p class="cart-description">App</p>
           </div>
         </li>
         <li class="cart-element">
-          <img src="" alt="" class="cart-image:s" />
+          <img src="./images/portfolio/img-5.jpg" alt="" class="cart-image" />
           <div class="cart-text_container">
-            <p class="cart-title"></p>
-            <p class="cart-description"></p>
+            <p class="cart-title">Taxi Service</p>
+            <p class="cart-description">Marketing</p>
           </div>
         </li>
         <li class="cart-element">
-          <img src="" alt="" class="cart-image:s" />
+          <img src="./images/portfolio/img-4.jpg" alt="" class="cart-image" />
           <div class="cart-text_container">
-            <p class="cart-title"></p>
-            <p class="cart-description"></p>
+            <p class="cart-title">Screen Illustrations</p>
+            <p class="cart-description">Design</p>
           </div>
         </li>
         <li class="cart-element">
-          <img src="" alt="" class="cart-image:s" />
+          <img src="./images/portfolio/img-3.jpg" alt="" class="cart-image" />
           <div class="cart-text_container">
-            <p class="cart-title"></p>
-            <p class="cart-description"></p>
+            <p class="cart-title">Online Courses</p>
+            <p class="cart-description">Marketing</p>
           </div>
         </li>
         <li class="cart-element">
-          <img src="" alt="" class="cart-image:s" />
+          <img src="./images/portfolio/img-2.jpg" alt="" class="cart-image" />
           <div class="cart-text_container">
-            <p class="cart-title"></p>
-            <p class="cart-description"></p>
+            <p class="cart-title">Instagram Stories Concept</p>
+            <p class="cart-description">Design</p>
           </div>
         </li>
         <li class="cart-element">
-          <img src="" alt="" class="cart-image:s" />
+          <img src="./images/portfolio/img-1.jpg" alt="" class="cart-image" />
           <div class="cart-text_container">
-            <p class="cart-title"></p>
-            <p class="cart-description"></p>
+            <p class="cart-title">Organic Food</p>
+            <p class="cart-description">Web Site</p>
           </div>
         </li>
         <li class="cart-element">
-          <img src="" alt="" class="cart-image:s" />
+          <img src="./images/portfolio/img.jpg" alt="" class="cart-image:s" />
           <div class="cart-text_container">
-            <p class="cart-title"></p>
-            <p class="cart-description"></p>
+            <p class="cart-title">Fresh Coffee</p>
+            <p class="cart-description">Web Site</p>
           </div>
         </li>
       </ul>
     </main>
     <footer class="footer-container">
-      <a href="./index.html" class="icon-logo_text">WebStudio</a>
+      <a href="./index.html" class="icon-logo_text"
+        ><span class="logo-accent">Web</span>Studio</a
+      >
       <p class="footer-content_text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
