--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <header class="header-container">
       <nav class="header-navigation">
-        <a href="./index.html" class="icon-logo_text"
-          ><span class="logo-accent">Web</span>Studio</a
+        <a href="./index.html" class="icon-logo_text link"
+          >Web<span class="logo-accent">Studio</span></a
         >
         <ul class="header-navigation_ul">
           <li class="header-navigation_li">
@@ -46,9 +46,7 @@
     <main class="main-container">
       <section class="content-section start-section">
         <h1 class="cover-section_h1">Effective Solutions for Your Business</h1>
-        <button class="cover-section_button" type="button">
-          Order Service
-        </button>
+        <input type="button" class="cover-section_button" value="Order Service">
       </section>
       <section class="content-section feature-section">
         <h2 class="visually-hidden">Features</h2>
@@ -159,8 +157,9 @@
       </section>
     </main>
     <footer class="footer-container">
-      <a href="./index.html" class="icon-logo_text"
-      ><span class="logo-accent">Web</span>Studio</a>
+      <a href="./index.html" class="icon-logo_text link"
+          >Web<span class="logo-accent">Studio</span></a
+        >
       <p class="footer-content_text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
