--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
   <body>
     <header class="header-container">
       <nav class="header-navigation">
-        <a href="./index.html" class="icon-logo_text"
-          ><span class="logo-accent">Web</span>Studio</a
+        <a href="./index.html" class="icon-logo_text link"
+          >Web<span class="logo-accent">Studio</span></a
         >
         <ul class="header-navigation_ul">
           <li class="header-navigation_li">
@@ -128,9 +128,9 @@
       </ul>
     </main>
     <footer class="footer-container">
-      <a href="./index.html" class="icon-logo_text"
-        ><span class="logo-accent">Web</span>Studio</a
-      >
+      <a href="./index.html" class="icon-logo_text link"
+          >Web<span class="logo-accent">Studio</span></a
+        >
       <p class="footer-content_text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
