--- a/portfolio.html
+++ b/portfolio.html
@@ -14,9 +14,9 @@
         <a href="./index.html" class="icon-logo_text link"
           >Web<span class="logo-accent">Studio</span></a
         >
-        <ul class="header-navigation_ul">
+        <ul class="header-navigation_ul list">
           <li class="header-navigation_li">
-            <a href="" class="header-navigation_a">Studio</a>
+            <a href="./index.html" class="header-navigation_a">Studio</a>
           </li>
           <li class="header-navigation_li">
             <a href="" class="header-navigation_a">Portfolio</a>
