--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           >Web<span class="logo-accent">Studio</span></a
         >
         <ul class="header-navigation_ul list">
-          <li class="header-navigation_li">
+          <li class="header-navigation_li link">
             <a href="./index.html" class="header-navigation_a">Studio</a>
           </li>
           <li class="header-navigation_li">
@@ -27,7 +27,7 @@
         </ul>
       </nav>
       <address class="header-adrress">
-        <ul class="header-address_ul">
+        <ul class="header-address_ul list">
           <li class="header-address_li">
             <a
               href="mailto:info@devstudio.com"
