--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
         </ul>
       </nav>
       <address class="header-adrress">
-        <ul class="header-address_ul">
-          <li class="header-address_li">
+        <ul class="header-address_ul list">
+          <li class="header-address_li link">
             <a
               href="mailto:info@devstudio.com"
               class="header-address_email-link"
