--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       </nav>
       <address class="header-adrress">
         <ul class="header-address_ul list">
-          <li class="header-address_li">
+          <li class="header-address_li link">
             <a
               href="mailto:info@devstudio.com"
               class="header-address_email-link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-address_li">
+          <li class="header-address_li link">
             <a href="tel:+110001111111" class="header-address_phone-link"
               >+11 (000) 111-11-11</a
             >
