--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-address_li">
+          <li class="header-address_li link">
             <a href="tel:+110001111111" class="header-address_phone-link"
               >+11 (000) 111-11-11</a
             >
