--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
           >Web<span class="logo-accent">Studio</span></a
         >
         <ul class="header-navigation_ul list">
-          <li class="header-navigation_li">
+          <li class="link header-navigation_li">
             <a href="./index.html" class="header-navigation_a">Studio</a>
           </li>
           <li class="header-navigation_li">
@@ -28,14 +28,14 @@
       </nav>
       <address class="header-adrress">
         <ul class="header-address_ul list">
-          <li class="header-address_li link">
+          <li class="link header-address_li">
             <a
               href="mailto:info@devstudio.com"
               class="header-address_email-link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-address_li link">
+          <li class="link header-address_li">
             <a href="tel:+110001111111" class="header-address_phone-link"
               >+11 (000) 111-11-11</a
             >
