--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles-reset.css" />
-    <link rel="stylesheet" href="./css/fonts.css" />
+    <!-- <link rel="stylesheet" href="./css/fonts.css" /> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
     <title class="title-text">Webstudio</title>
   </head>
@@ -15,8 +17,8 @@
           >Web<span class="logo-accent">Studio</span></a
         >
         <ul class="header-navigation_ul list">
-          <li class="link header-navigation_li">
-            <a href="./index.html" class="header-navigation_a">Studio</a>
+          <li class="header-navigation_li">
+            <a href="./index.html" class="header-navigation_a link">Studio</a>
           </li>
           <li class="header-navigation_li">
             <a href="./portfolio.html" class="header-navigation_a">Portfolio</a>
@@ -28,15 +30,15 @@
       </nav>
       <address class="header-adrress">
         <ul class="header-address_ul list">
-          <li class="link header-address_li">
+          <li class="header-address_li">
             <a
               href="mailto:info@devstudio.com"
-              class="header-address_email-link"
+              class="header-address_email-link link"
               >info@devstudio.com</a
             >
           </li>
-          <li class="header-address_li link">
-            <a href="tel:+110001111111" class="header-address_phone-link"
+          <li class="header-address_li">
+            <a href="tel:+110001111111" class="header-address_phone-link link"
               >+11 (000) 111-11-11</a
             >
           </li>
