--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <main class="main-container">
       <section class="content-section start-section">
-        <h1 class="cover-section_h1">Effective Solutions for Your Business</h1>
+        <h1 class="cover-section_h">Effective Solutions for Your Business</h1>
         <input type="button" class="cover-section_button" value="Order Service">
       </section>
       <section class="content-section feature-section">
