--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main class="main-container">
       <section class="content-section start-section">
         <h1 class="cover-section_h">Effective Solutions for Your Business</h1>
-        <input type="button" class="cover-section_button" value="Order Service">
+        <button type="button" class="cover-section_button">Order Service</button>
       </section>
       <section class="content-section feature-section">
         <h2 class="visually-hidden">Features</h2>
