--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <a href="./index.html" class="header-navigation_a link">Studio</a>
           </li>
           <li class="header-navigation_li">
-            <a href="./portfolio.html" class="header-navigation_a">Portfolio</a>
+            <a href="./portfolio.html" class="header-navigation_a link">Portfolio</a>
           </li>
           <li class="header-navigation_li">
-            <a href="" class="header-navigation_a">Contacts</a>
+            <a href="" class="header-navigation_a link">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -33,12 +33,12 @@
           <li class="header-address_li">
             <a
               href="mailto:info@devstudio.com"
-              class="header-address_email-link link"
+              class="header-address_link link"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-address_li">
-            <a href="tel:+110001111111" class="header-address_phone-link link"
+            <a href="tel:+110001111111" class="header-address_link link"
               >+11 (000) 111-11-11</a
             >
           </li>
