--- a/index.html
+++ b/index.html
@@ -52,30 +52,30 @@
       </section>
       <section class="content-section feature-section">
         <h2 class="visually-hidden">Features</h2>
-        <ul class="content-text-container">
+        <ul class="content-text-container list">
           <li class="content-text_block">
-            <h3 class="content-text_h3">Strategy</h3>
+            <h3 class="content-text_h">Strategy</h3>
             <p class="content-text_p">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="content-text_block">
-            <h3 class="content-text_h3">Punctuality</h3>
+            <h3 class="content-text_h">Punctuality</h3>
             <p class="content-text_p">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="content-text_block">
-            <h3 class="content-text_h3">Diligence</h3>
+            <h3 class="content-text_h">Diligence</h3>
             <p class="content-text_p">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="content-text_block">
-            <h3 class="content-text_h3">Technologies</h3>
+            <h3 class="content-text_h">Technologies</h3>
             <p class="content-text_p">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -84,8 +84,8 @@
         </ul>
       </section>
       <section class="content-section doing-section">
-        <h2 class="content-photo_h2">What are we doing</h2>
-        <ul class="content-photos">
+        <h2 class="content-photo_h">What are we doing</h2>
+        <ul class="content-photos list">
           <li class="content-photo_li">
             <img
               width="360"
@@ -113,8 +113,8 @@
         </ul>
       </section>
       <section class="content-section team-section">
-        <h2 class="content-team_h2">Our Team</h2>
-        <ul class="content-team-container">
+        <h2 class="content-team_h">Our Team</h2>
+        <ul class="content-team-container list">
           <li class="team-persone_card">
             <img
               width="264"
