--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
             <a href="./index.html" class="header-navigation_a link">Studio</a>
           </li>
           <li class="header-navigation_li">
-            <a href="" class="header-navigation_a link">Portfolio</a>
+            <a href="./portfolio.html" class="header-navigation_a link">Portfolio</a>
           </li>
           <li class="header-navigation_li">
             <a href="" class="header-navigation_a link">Contacts</a>
@@ -47,27 +47,25 @@
     </header>
     <main class="contant-container">
       <section class="buttons-container_section">
-        <h2 class="buttons-heading .visually-hidden">Buttons</h2>
-        <ul class="filter-buttons">
+        <h1 class="buttons-heading visually-hidden">Buttons</h1>
+        <ul class="filter-buttons list">
           <li class="button-wrapper">
-            <input type="button" value="all" class="filter-button" />
+            <button type="button" class="filter-button">All</button>
           </li>
           <li class="button-wrapper">
-            <input type="button" value="web site" class="filter-button" />
+            <button type="button" class="filter-button">Web Site</button>
           </li>
           <li class="button-wrapper">
-            <input type="button" value="app" class="filter-button" />
+            <button type="button" class="filter-button">App</button>
           </li>
           <li class="button-wrapper">
-            <input type="button" value="design" class="filter-button" />
+            <button type="button" class="filter-button">Design</button>
           </li>
           <li class="button-wrapper">
-            <input type="button" value="marketing" class="filter-button" />
+            <button type="button" class="filter-button">Marketing</button>
           </li>
         </ul>
-      </section>
-      <section class="image-container-row">
-        <ul class="cart-list">
+        <ul class="cart-list list">
           <li class="cart-element">
             <img src="./images/portfolio/img-8.jpg" alt="" class="cart-image" />
             <div class="cart-text_container">
@@ -89,10 +87,6 @@
               <p class="cart-description">App</p>
             </div>
           </li>
-        </ul>
-      </section>
-      <section class="image-container-row">
-        <ul class="cart-list">
           <li class="cart-element">
             <img src="./images/portfolio/img-5.jpg" alt="" class="cart-image" />
             <div class="cart-text_container">
@@ -114,10 +108,6 @@
               <p class="cart-description">Marketing</p>
             </div>
           </li>
-        </ul>
-      </section>
-      <section class="image-container-row">
-        <ul class="cart-list">
           <li class="cart-element">
             <img src="./images/portfolio/img-2.jpg" alt="" class="cart-image" />
             <div class="cart-text_container">
