--- a/portfolio.html
+++ b/portfolio.html
@@ -67,46 +67,58 @@
         </ul>
         <ul class="cart-list list">
           <li class="cart-element">
-            <img src="./images/portfolio/img-8.jpg" alt="" class="cart-image" />
-            <div class="cart-text_container">
-              <p class="cart-title">Banking App Interface Concept</p>
-              <p class="cart-description">App</p>
-            </div>
+            <a href="" class="link">
+              <img src="./images/portfolio/img-8.jpg" alt="" class="cart-image" />
+              <div class="cart-text_container">
+                <p class="cart-title">Banking App Interface Concept</p>
+                <p class="cart-description">App</p>
+              </div>
+            </a>
           </li>
           <li class="cart-element">
-            <img src="./images/portfolio/img-7.jpg" alt="" class="cart-image" />
+            <a href="" class="link">
+              <img src="./images/portfolio/img-7.jpg" alt="" class="cart-image" />
             <div class="cart-text_container">
               <p class="cart-title">Cashless Payment</p>
               <p class="cart-description">Marketing</p>
             </div>
+            </a>
           </li>
           <li class="cart-element">
-            <img src="./images/portfolio/img-6.jpg" alt="" class="cart-image" />
+            <a href="" class="link">
+              <img src="./images/portfolio/img-6.jpg" alt="" class="cart-image" />
             <div class="cart-text_container">
               <p class="cart-title">Meditation App</p>
               <p class="cart-description">App</p>
             </div>
+            </a>
           </li>
           <li class="cart-element">
-            <img src="./images/portfolio/img-5.jpg" alt="" class="cart-image" />
+            <a href="" class="link">
+              <img src="./images/portfolio/img-5.jpg" alt="" class="cart-image" />
             <div class="cart-text_container">
               <p class="cart-title">Taxi Service</p>
               <p class="cart-description">Marketing</p>
             </div>
+            </a>
           </li>
           <li class="cart-element">
-            <img src="./images/portfolio/img-4.jpg" alt="" class="cart-image" />
+            <a href="" class="link">
+              <img src="./images/portfolio/img-4.jpg" alt="" class="cart-image" />
             <div class="cart-text_container">
               <p class="cart-title">Screen Illustrations</p>
               <p class="cart-description">Design</p>
             </div>
+            </a>
           </li>
           <li class="cart-element">
-            <img src="./images/portfolio/img-3.jpg" alt="" class="cart-image" />
+            <a href="" class="link">
+              <img src="./images/portfolio/img-3.jpg" alt="" class="cart-image" />
             <div class="cart-text_container">
               <p class="cart-title">Online Courses</p>
               <p class="cart-description">Marketing</p>
             </div>
+            </a>
           </li>
           <li class="cart-element">
             <img src="./images/portfolio/img-2.jpg" alt="" class="cart-image" />
@@ -116,18 +128,22 @@
             </div>
           </li>
           <li class="cart-element">
-            <img src="./images/portfolio/img-1.jpg" alt="" class="cart-image" />
+            <a href="" class="link">
+              <img src="./images/portfolio/img-1.jpg" alt="" class="cart-image" />
             <div class="cart-text_container">
               <p class="cart-title">Organic Food</p>
               <p class="cart-description">Web Site</p>
             </div>
+            </a>
           </li>
           <li class="cart-element">
-            <img src="./images/portfolio/img.jpg" alt="" class="cart-image:s" />
+            <a href="" class="link">
+              <img src="./images/portfolio/img.jpg" alt="" class="cart-image:s" />
             <div class="cart-text_container">
               <p class="cart-title">Fresh Coffee</p>
               <p class="cart-description">Web Site</p>
             </div>
+            </a>
           </li>
         </ul>
       </section>
